chore: add logo and icons

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#1EA4CE" />
         <meta name="description" content="A sample React market application" />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+        <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="512x512"
+            href="/android-chrome-512x512.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="192x192"
+            href="/android-chrome-192x192.png"
+        />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <title>Market</title>
     </head>
