--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
         <meta name="theme-color" content="#1EA4CE" />
         <meta name="description" content="A sample React market application" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+            rel="stylesheet"
+        />
         <link
             rel="icon"
             type="image/png"
